# f1t_mech_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller/lib/controller/: controller
install/controller/share/controller/: package.sh
install/controller/share/controller/config/: controller_config.yaml
install/controller/share/controller/launch/: controller_launch.py
install/custom_msg/share/custom_msg/: local_setup.sh  package.ps1  package.sh  package.xml
install/custom_msg/share/custom_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  custom_msg__rosidl_typesupport_cExport.cmake  custom_msg__rosidl_typesupport_introspection_cExport.cmake
install/custom_msg/share/custom_msg/msg/: LatErr.msg
install/img_proc/include/img_proc/msg/: lat_err.hpp  rosidl_generator_c__visibility_control.h  yaw_err.h  (+2 more)
install/img_proc/lib/img_proc/: img_proc_node
install/img_proc/share/img_proc/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mech_msg/share/mech_msg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/controller/: CMakeLists.txt  package.xml
src/controller/config/: controller_config.yaml
src/controller/src/: controller.cpp  controller.h
src/img_proc/: CMakeLists.txt  package.xml
src/img_proc/config/: img_proc_config.yaml
src/img_proc/launch/: img_proc_launch.py
src/img_proc/src/: img_proc_node.cpp  img_proc_node.h
src/mech_msg/: CMakeLists.txt  package.xml
src/mech_msg/msg/: Laterr.msg  Steer.msg
(+80 files in other folders)
